--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 						<!-- <i class="fa fa-mobile"></i> -->
 						<h3>Example 4</h3>
 						<p>Description of project.</p>
-						<a href="https://github.com/csheng6">Github Repo</a><br><br>
+						<a href="https://github.com/csheng6">Github Repo</a><br>
+						<a href="https://pypi.org">PyPI</a>
 					</div>
 				</div>
 				<!-- /about -->
