--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 
 		<!-- Container -->
 		<div class="container">
+			
+			<!-- Section header -->
+			<div class="section-header text-center">
+				<h2 class="title">Projects</h2>
+			</div>
+			<!-- /Section header -->
 
 			<!-- Row -->
 			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Projects</h2>
-				</div>
-				<!-- /Section header -->
 
 				<!-- about -->
 				<div class="col-md-4">
@@ -136,6 +136,11 @@
 					</div>
 				</div>
 				<!-- /about -->
+
+			</div>
+			<!-- /Row -->
+
+			<div class="row">
 
 				<!-- about -->
 				<div class="col-md-4">
