Adding BookBot and Maze Solver

--- a/index.html
+++ b/index.html
@@ -129,10 +129,9 @@
 				<div class="col-md-4">
 					<div class="about">
 						<!-- <i class="fa fa-mobile"></i> -->
-						<h3>Example 2</h3>
-						<p>A python 3 wrapper to interact with the ___ API.</p><br>
-						<a href="https://github.com/csheng6">Github Repo</a><br>
-						<a >PyPI (soon)</a>
+						<h3>BookBot</h3>
+						<p>Can run a word count on text file and return a count for each alphabet character.</p><br>
+						<a href="https://github.com/csheng6/bookbot">Github Repo</a><br>
 					</div>
 				</div>
 				<!-- /about -->
@@ -146,10 +145,9 @@
 				<div class="col-md-4">
 					<div class="about">
 						<!-- <i class="fa fa-mobile"></i> -->
-						<h3>Example 3</h3>
-						<p>Simple Python rate limit decorator.</p><br>
-						<a href="https://github.com/csheng6">Github Repo</a><br>
-						<a href="https://pypi.org">PyPI</a>
+						<h3>Maze Generator/Solver</h3>
+						<p>Randomly generates a maze and solves it.</p><br>
+						<a href="https://github.com/csheng6/maze_solver">Github Repo</a><br>
 					</div>
 				</div>
 				<!-- /about -->
