Adding Blog made with Flask

--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
 				<div class="col-md-4">
 					<div class="about">
 						<!-- <i class="fa fa-mobile"></i> -->
-						<h3>Example 4</h3>
-						<p>Description of project.</p>
-						<a href="https://github.com/csheng6">Github Repo</a><br>
-						<a href="https://pypi.org">PyPI</a>
+						<h3>Flask Blog</h3>
+						<p>A blog where users can make posts, edit and delete them.</p>
+						<a href="https://github.com/csheng6/flask_blog">Github Repo</a><br>
 					</div>
 				</div>
 				<!-- /about -->
