--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<div class="about">
 						<!-- <i class="fa fa-cogs"></i> -->
 						<h3>Leap Motion</h3>
-						<p>Extracting data associated with tracking natural hand movements from a Leap Motion Controller 2 using C++.</p>
+						<p>Extracting data associated with tracking natural hand movements from a Leap Motion Controller 2 using C++, Leap SDK.</p>
 						<a href="https://github.com/csheng6/Leap_Motion">Github Repo</a><br>
 					</div>
 				</div>
@@ -118,9 +118,8 @@
 					<div class="about">
 						<!-- <i class="fa fa-magic"></i> -->
 						<h3>Myo</h3>
-						<p>Extracting data from a Myo Armband associated with electrical activity in muscles created from arm and hand gestures.</p>
+						<p>Extracting data from a Myo Armband associated with electrical activity in muscles created from arm and hand gestures. Myo SDK</p>
 						<a href="https://github.com/csheng6/Myo">Github Repo</a><br>
-						<a href="https://pypi.org/">PyPI </a>
 					</div>
 				</div>
 				<!-- /about -->
